--- a/src/style.css
+++ b/src/style.css
@@ -13,10 +13,14 @@
   border-radius: 40px;
 }
 
-#day-time,
-h2 {
+#day-time {
+  color: #0c3483;
+  font-size: 30px;
+  text-align: center;
+}
+h3 {
   color: #a2b6df;
-  font-size: 25px;
+  font-size: 23px;
   text-align: center;
 }
 #current-location-button {
@@ -57,10 +61,9 @@ img {
   color: #a2b6df;
 }
 
-.fa-cloud-sun,
-.fa-tint,
-.fa-wind {
-  color: #193d8a;
+.fa-wind,
+.fa-tint {
+  color: white;
   font-size: 27px;
 }
 
@@ -72,4 +75,8 @@ img {
 
 #link {
   color: purple;
+}
+
+#icon {
+  width: 50px;
 }
